# concuSat

./: CMakeLists.txt  README.md  main.cpp
camara/: Camara.cpp  Camara.h
concu/: MemoriaCompartida.cpp  MemoriaCompartida.h
concu/fifos/: Fifo.cpp  Fifo.h  FifoEscritura.cpp  FifoEscritura.h  FifoLectura.cpp  FifoLectura.h
concu/señales/: AjustadorHandlerSIGINT.h  EventHandler.h  ObservatorioHandlerSIGINT.h  SignalHandler.cpp  SignalHandler.h
config/: Config.cpp  Config.h
logger/: Logger.cpp  Logger.h
observatorio/: Ajustador.cpp  Ajustador.h  Camara.cpp  Camara.h  Observatorio.cpp  Observatorio.h
serializador/: SerializadorFoto.cpp  SerializadorFoto.h
